--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,29 +7,29 @@
 
     <fragment
         android:id="@+id/navigation_coins"
-        android:name="com.bsk.coiinttracker.coinlist.ui.CoinListFragment"
+        android:name="com.bsk.cointracker.coinlist.ui.CoinListFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_coins">
         <action
-            android:id="@+id/action_navigation_coins_to_legoSetFragment"
-            app:destination="@id/legoSetFragment" />
+            android:id="@+id/action_navigation_coins_to_coinDetailFragment"
+            app:destination="@id/coinDetailFragment" />
     </fragment>
 
     <fragment
         android:id="@+id/navigation_dashboard"
-        android:name="com.bsk.coiinttracker.dashboard.DashboardFragment"
+        android:name="com.bsk.cointracker.dashboard.DashboardFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
 
     <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.bsk.coiinttracker.notifications.NotificationsFragment"
+        android:name="com.bsk.cointracker.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
 
     <fragment
-        android:id="@+id/legoSetFragment"
-        android:name="com.bsk.coiinttracker.coinldetail.CoinDetailFragment"
+        android:id="@+id/coinDetailFragment"
+        android:name="com.bsk.cointracker.coinldetail.CoinDetailFragment"
         android:label="@string/title_coin_detail"
         tools:layout="@layout/fragment_coin_detail">
 
