FavoriteCoinsFragment.kt added with its view model

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -16,14 +16,8 @@
     </fragment>
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.bsk.cointracker.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
-
-    <fragment
         android:id="@+id/navigation_notifications"
-        android:name="com.bsk.cointracker.notifications.NotificationsFragment"
+        android:name="com.bsk.cointracker.favoritecoins.FavoriteCoinsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
 
