--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/navigation_coins"
         android:name="com.bsk.cointracker.coinlist.ui.CoinListFragment"
-        android:label="@string/title_home"
+        android:label="@string/title_coins"
         tools:layout="@layout/fragment_coins">
         <action
             android:id="@+id/action_navigation_coins_to_coinDetailFragment"
@@ -16,9 +16,9 @@
     </fragment>
 
     <fragment
-        android:id="@+id/navigation_notifications"
+        android:id="@+id/navigation_favorite_coins"
         android:name="com.bsk.cointracker.favoritecoins.FavoriteCoinsFragment"
-        android:label="@string/title_notifications"
+        android:label="@string/title_favorite_coins"
         tools:layout="@layout/fragment_notifications" />
 
     <fragment
