packages re-organized

--- a/app/src/main/res/layout/fragment_coin_detail.xml
+++ b/app/src/main/res/layout/fragment_coin_detail.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="coin"
-            type="com.bsk.cointracker.coinlist.data.Coin" />
+            type="com.bsk.cointracker.data.remote.entities.Coin" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
