--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_coins"
-        android:name="com.bsk.cointracker.coinlist.ui.CoinListFragment"
+        android:name="com.bsk.cointracker.ui.coinlist.CoinListFragment"
         android:label="@string/title_coins"
         tools:layout="@layout/fragment_coins">
         <action
@@ -23,7 +23,7 @@
 
     <fragment
         android:id="@+id/coinDetailFragment"
-        android:name="com.bsk.cointracker.coinldetail.CoinDetailFragment"
+        android:name="com.bsk.cointracker.ui.coinldetail.CoinDetailFragment"
         android:label="@string/title_coin_detail"
         tools:layout="@layout/fragment_coin_detail">
 
