--- a/app/src/main/res/layout/fragment_favorite_coins.xml
+++ b/app/src/main/res/layout/fragment_favorite_coins.xml
@@ -6,7 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".favoritecoins.FavoriteCoinsFragment">
+        tools:context=".ui.favoritecoins.FavoriteCoinsFragment">
 
         <TextView
             android:id="@+id/text_notifications"
