--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -17,7 +17,7 @@
 
     <fragment
         android:id="@+id/navigation_favorite_coins"
-        android:name="com.bsk.cointracker.favoritecoins.FavoriteCoinsFragment"
+        android:name="com.bsk.cointracker.ui.favoritecoins.FavoriteCoinsFragment"
         android:label="@string/title_favorite_coins"
         tools:layout="@layout/fragment_favorite_coins" />
 
