coin list item UI is updated

--- a/app/src/main/res/layout/list_item_coin.xml
+++ b/app/src/main/res/layout/list_item_coin.xml
@@ -10,63 +10,47 @@
             type="com.bsk.cointracker.data.remote.entities.Coin" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="16dp"
-            android:contentDescription="@string/desc_coin_image"
-            app:imageUrl="@{item.symbol}"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars[11]" />
-
-        <LinearLayout
-            android:id="@+id/linearLayout"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:foreground="?attr/selectableItemBackground"
-            android:orientation="vertical"
-            android:padding="16dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/textView3"
-            app:layout_constraintStart_toEndOf="@+id/imageView2"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:scaleType="centerCrop"
-                android:text="@{item.name}"
-                android:textAppearance="?attr/textAppearanceListItem"
-                tools:text="Tree House" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:ellipsize="end"
-                android:maxLines="1"
-                android:text="@{item.id}"
-                android:textAppearance="?attr/textAppearanceListItemSecondary"
-                tools:text="Tree House" />
-        </LinearLayout>
+        android:layout_height="wrap_content"
+        android:foreground="?attr/selectableItemBackground"
+        android:orientation="horizontal"
+        android:paddingHorizontal="16dp"
+        android:paddingVertical="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/textView3"
+        app:layout_constraintStart_toEndOf="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:text="@{`$ `+ item.price}"
-            android:textAppearance="?attr/textAppearanceHeadline6"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="$ 3000" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            android:layout_weight="0"
+            android:lines="1"
+            android:text="@{item.symbol}"
+            android:gravity="center"
+            android:paddingHorizontal="4dp"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:background="@drawable/bg_coin_symbol"
+            android:textAppearance="?attr/textAppearanceSearchResultTitle"
+            app:autoSizeMaxTextSize="18sp"
+            app:autoSizeMinTextSize="12sp"
+            app:autoSizeTextType="uniform"
+            app:autoSizeStepGranularity="2sp"
+            tools:text="usdthalf" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="0.1"
+            android:ellipsize="end"
+            android:paddingStart="8dp"
+            android:gravity="center|start"
+            android:paddingEnd="8dp"
+            android:text="@{item.name}"
+            android:textAppearance="?attr/textAppearanceSearchResultSubtitle"
+            tools:text="Tree House" />
+    </LinearLayout>
 </layout>
