fragment_coin_detail.xml is updated

--- a/app/src/main/res/layout/fragment_coin_detail.xml
+++ b/app/src/main/res/layout/fragment_coin_detail.xml
@@ -27,9 +27,10 @@
 
                 <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="200dp"
+                    android:layout_weight="0"
+                    android:layout_gravity="center"
                     android:adjustViewBounds="true"
-                    android:background="@color/design_default_color_error"
                     android:contentDescription="@string/desc_coin_image"
                     android:scaleType="fitCenter"
                     app:imageUrl="@{coin.largeImage}"
@@ -159,13 +160,15 @@
             android:id="@+id/img_favorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="24dp"
-            android:layout_marginTop="24dp"
             android:layout_gravity="end|top"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="24dp"
             android:contentDescription="@string/desc_back_image"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/fav_button" />
+            app:srcCompat="@drawable/fav_button"
+            tools:visibility="visible" />
 
         <ProgressBar
             android:id="@+id/progressBar"
