--- a/app/src/main/res/layout/fragment_favorite_coins.xml
+++ b/app/src/main/res/layout/fragment_favorite_coins.xml
@@ -3,24 +3,36 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <data>
+
+        <import type="android.view.View" />
+
+        <variable
+            name="showPlaceHolder"
+            type="Boolean" />
+    </data>
+
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.favoritecoins.FavoriteCoinsFragment">
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_favorite_coins"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:context=".ui.favoritecoins.FavoriteCoinsFragment"
+            tools:listitem="@layout/list_item_favorite_coin" />
 
         <TextView
-            android:id="@+id/text_notifications"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:textAlignment="center"
+            android:layout_height="match_parent"
+            android:alpha="0.8"
+            android:gravity="center"
             android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="@tools:sample/lorem" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            android:text="@string/message_no_favorites"
+            android:textStyle="bold"
+            android:visibility="@{showPlaceHolder ? View.VISIBLE : View.GONE}" />
+    </FrameLayout>
 </layout>
