--- a/app/src/main/res/layout/fragment_coin_detail.xml
+++ b/app/src/main/res/layout/fragment_coin_detail.xml
@@ -10,6 +10,10 @@
         <variable
             name="coin"
             type="com.bsk.cointracker.data.remote.entities.Coin" />
+
+        <variable
+            name="coin"
+            type="com.bsk.cointracker.data.remote.entities.Coin" />
     </data>
 
     <FrameLayout
@@ -28,8 +32,8 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
-                    android:layout_weight="0"
                     android:layout_gravity="center"
+                    android:layout_weight="0"
                     android:adjustViewBounds="true"
                     android:contentDescription="@string/desc_coin_image"
                     android:scaleType="fitCenter"
@@ -59,12 +63,40 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:paddingHorizontal="16dp"
+                    android:paddingVertical="8dp">
+
+                    <TextView
+                        android:id="@+id/tv_timer_desc"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:drawablePadding="12dp"
+                        android:text="Refresh interval in minutes: "
+                        app:drawableStartCompat="@drawable/ic_timer" />
+
+                    <EditText
+                        android:id="@+id/edt_timer"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginHorizontal="12dp"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:inputType="number"
+                        android:padding="14dp"
+                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="12dp"
                     android:orientation="horizontal">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="12dp"
                         android:layout_weight="1"
                         android:orientation="vertical">
 
