--- a/app/src/main/res/layout/fragment_coin_detail.xml
+++ b/app/src/main/res/layout/fragment_coin_detail.xml
@@ -69,6 +69,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:drawablePadding="12dp"
+                        android:gravity="center"
                         android:text="Refresh interval in minutes: "
                         app:drawableStartCompat="@drawable/ic_timer" />
 
