--- a/app/src/main/res/layout/fragment_favorite_coins.xml
+++ b/app/src/main/res/layout/fragment_favorite_coins.xml
@@ -14,7 +14,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="16dp">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_favorite_coins"
